Fix overflow

--- a/FindYoursNew/src/assets/css/App.scss
+++ b/FindYoursNew/src/assets/css/App.scss
@@ -16,7 +16,6 @@ body, .App, #root{
      align-items: center;
      min-height: 100vh;
      width: 100%;
-     overflow-y: hidden;
 }
 
 main{
